# customer-data-fusion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  generate_cdt_cache.py  get_trace_coverage_participants.py  main.py  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
config/: personas.yaml
docs/: cdt-architecture.html  modalities.md
evaluation/: ablation.py  check_retraining_trigger.py  config_probe.py  counterfactual.py  counterfactual_option_b.py  generate_probe_plots.py  geometry.py  overlap.py  probe.py  psychographic_probe.py  retrieval.py  run_probes.py  strategy_recovery.py  temporal_split.py  text_probe.py  trace_baseline.py  trace_probe.py  transaction_probe.py  verify_trace_choice_coupling.py
fusion/: SPEC.md  __init__.py  meta_learner.py  temporal_data.py  temporal_loss.py  train.py
generator/: SPEC.md  campaign_generator.py  choice_model.py  clickstream_generator.py  persona_sampler.py  pipeline.py  product_catalog.py  psychographic_generator.py  text_generator.py  trace_simulator.py  transaction_simulator.py  validate.py
models/: campaign_encoder.pt  clickstream_encoder.pt  fusion_embeddings_cache.pt  fusion_meta_learner.pt  fusion_metalearner.pt  psychographic_encoder.pt  text_encoder.pt  trace_encoder.pt  transaction_encoder.pt
notebooks/: 01_generator_eda.ipynb  02_encoder_probing.ipynb  03_fusion_validation.ipynb  04_counterfactual_tests.ipynb
schemas/: __init__.py  campaign.py  choice_set.py  clickstream.py  persona.py  product.py  psychographic.py  text.py  trace.py  (+1 more)
(+118 files in other folders)
