[project]
name = "customer-data-fusion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "optuna>=4.8.0",
    "polars>=1.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "structlog>=25.5.0",
    "torch>=2.12.0",
    "umap-learn>=0.5.12",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "optuna-integration>=4.4.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "scikit-learn>=1.9.0",
    "skrub==0.9.0",
    "umap-learn>=0.5.12",
]
